2007-09-25  Nagappan A  <anagappan@novell.com>

	* DataTable.cs: Code alignment.

2007-08-14  Vladimir Krasnov <vladimirk@mainsoft.com>

	* DataColumnCollection.cs: refactoring, fixed columnNameCount comparer
	to remove culture sensitive ToLower() calls

2007-07-22  Nagappan A  <anagappan@novell.com>

	* DataRow.cs: Added internal set property for Table in 2.0
	profile.

	* DataColumn.cs: Added internal set property for Table in 2.0
	profile.

2007-07-01  Gert Driesen  <drieseng@users.sourceforge.net>

	* DataRowCollection.cs: Only override Count on 2.0 profile.
	* RelatedDataView.cs: Fixed line endings.
	* XmlDataInferenceLoader.cs: Fixed line endings.

2007-06-30  Gert Driesen  <drieseng@users.sourceforge.net>

	* DataTableCollection.cs: CopyTo is 2.0 only. Removed extra tabs,
	and changed spaces to tabs.

2007-06-06  Nagappan A  <anagappan@novell.com>

	* DataTable.cs (Select): Removed ununsed variable.

2007-05-30  Nagappan A  <anagappan@novell.com>

	* DataColumnCollection.cs (CopyTo): Method specific to 2.0
	profile.

	* DataRowCollection.cs (Count): Property is overridden in 2.0
	profile.

	* TypedDataSetGenerator.cs: Class is obsolete in 2.0 profile.

	* DataRelationCollection.cs (CopyTo): Method specific to 2.0
	profile.

2007-05-18  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* CustomDataClassGenerator.cs: Misc fixes in order to emit correct VB code.
	CreateDataSetDefaultCtor: we're creating a delegate, not an object, so use a DelegateCreateExpression.
	CreateDataSetSchemaChanged: we're comparing value types, use the correct equality operator.
	CreateTableGetEnumerator: explicity state that the method is an implementation of IEnumerable.GetEnumerator.
	CreateTableEventStarter: we're invoking a delegate, so use a DelegateInvokeExpression.
	Several changes to not generate members with names that only differ by case.

2007-05-18  Chris Toshok  <toshok@ximian.com>

	* DataColumnCollection.cs (Add ()): handle the default name case
	in Add(DataColumn).